# RISC-V-Simulator

./: .gitignore  CMakeLists.txt
src/: brute_cpu.cpp  brute_cpu.h  brute_main.cpp  tomasulo_cpu.cpp  tomasulo_main.cpp
src/alu/: alu.cpp  imm_gen.cpp  reservation_station.cpp
src/decoder/: instruction_decoder.cpp
src/include/: brute_cpu.h  tomasulo_cpu.h  util.hpp  wiring.h
src/include/alu/: alu.h  imm_gen.h  reservation_station.h
src/include/decoder/: instruction_decoder.h
src/include/instruction_queue/: branch_predictor.h  instruction_queue.h
src/include/memory/: decoder.h  load_store_buffer.h  memory.h
src/include/reg_file/: reg_file.h  register_status.h
src/include/reorder_buffer/: reorder_buffer.h
src/instruction_queue/: branch_predictor.cpp  instruction_queue.cpp
src/memory/: decoder.cpp  load_store_buffer.cpp  memory.cpp
src/reg_file/: reg_file.cpp  register_status.cpp
src/reorder_buffer/: reorder_buffer.cpp
